--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
 <body class="p-8">
   <div class="rides container text-center mx-auto">
 
-    <!-- Design specs only – delete the contents of this div when finished -->
+
+  </div>
+
+  <script src="https://kit.fontawesome.com/d0bf6bf32c.js" crossorigin="anonymous"></script>
+  <script src="noober.js"></script>
+</body>
+
+</html>
+
+
+<!-- Deleted content -->
+
+<!-- Design specs only – delete the contents of this div when finished -->
 
     <!-- A sample Noober X -->
-    <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
+    <!-- <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
       <i class="fas fa-car-side"></i>
       <span>Noober X</span>
     </h1>
@@ -49,10 +61,10 @@
           <p>Chicago, IL 60603</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- A sample Noober Pool -->
-    <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
+    <!-- <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
       <i class="fas fa-car-side"></i>
       <span>Noober Pool</span>
     </h1>
@@ -107,10 +119,10 @@
           <p>Chicago, IL 60603</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- A sample Noober XL -->
-    <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
+    <!-- <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
       <i class="fas fa-car-side"></i>
       <span>Noober XL</span>
     </h1>
@@ -139,10 +151,10 @@
           <p>Chicago, IL 60603</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- A sample Noober Purple -->
-    <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
+    <!-- <h1 class="inline-block mt-8 px-4 py-2 rounded-xl text-2xl bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-500">
       <i class="fas fa-car-side"></i>
       <span>Noober Purple</span>
     </h1>
@@ -171,15 +183,5 @@
           <p>Chicago, IL 60603</p>
         </div>
       </div>
-    </div>
+    </div> -->
     <!-- End delete when done -->
-
-
-
-  </div>
-
-  <script src="https://kit.fontawesome.com/d0bf6bf32c.js" crossorigin="anonymous"></script>
-  <script src="noober.js"></script>
-</body>
-
-</html>
